Bug 1509067 - Make font fallback properly search across multiple 'normal' faces of a family (e.g. where subsetting has been used to split a font between multiple files). r=jrmuizel