gfx/thebes/gfxPlatformFontList.cpp
@@ -640,43 +640,20 @@ gfxFontEntry* gfxPlatformFontList::CommonFontFallback(
     uint32_t aCh, uint32_t aNextCh, Script aRunScript,
     const gfxFontStyle* aMatchStyle, gfxFontFamily** aMatchedFamily) {
   AutoTArray<const char*, NUM_FALLBACK_FONTS> defaultFallbacks;
-  uint32_t i, numFallbacks;
-
   gfxPlatform::GetPlatform()->GetCommonFallbackFonts(aCh, aNextCh, aRunScript,
                                                      defaultFallbacks);
-  numFallbacks = defaultFallbacks.Length();
-  for (i = 0; i < numFallbacks; i++) {
-    nsAutoCString familyName(defaultFallbacks[i]);
-    gfxFontFamily* fallback = FindFamilyByCanonicalName(familyName);
-    if (!fallback) {
-      continue;
-    }
-
-    gfxFontEntry* fontEntry;
-
-    // use first font in list that supports a given character
-    fontEntry = fallback->FindFontForStyle(*aMatchStyle);
-    if (fontEntry) {
-      if (fontEntry->HasCharacter(aCh)) {
+  GlobalFontMatch data(aCh, *aMatchStyle);
+  for (const auto name : defaultFallbacks) {
+    gfxFontFamily* fallback =
+        FindFamilyByCanonicalName(nsDependentCString(name));
+    if (fallback) {
+      fallback->FindFontForChar(&data);
+      if (data.mBestMatch) {
         *aMatchedFamily = fallback;
-        return fontEntry;
-      }
-      // If we requested a styled font (bold and/or italic), and the char
-      // was not available, check other faces of the family.
-      if (!fontEntry->IsNormalStyle()) {
-        // If style/weight/stretch was not Normal, see if we can
-        // fall back to a next-best face (e.g. Arial Black -> Bold,
-        // or Arial Narrow -> Regular).
-        GlobalFontMatch data(aCh, *aMatchStyle);
-        fallback->SearchAllFontsForChar(&data);
-        if (data.mBestMatch) {
-          *aMatchedFamily = fallback;
-          return data.mBestMatch;
-        }
+        return data.mBestMatch;
       }
     }
   }
-
   return nullptr;
 }
 
